force-app/main/default/objects/Rappel__c/Rappel__c.object-meta.xml
<CustomObject>
    <description>Tabla para guardar los datos de Rappel de los Clientes.</description>
    <label>Rappel</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Ordinal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rappels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>