force-app/main/default/objects/Rappel__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guarda la relacion con el Cliente que posee el Rappel</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rappels</relationshipLabel>
    <relationshipName>Rappels</relationshipName>
    <type>Lookup</type>
</CustomField>