force-app/main/default/objects/Rappel__c/fields/Codigo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Cliente__c</fullName>
    <formula>Cliente__r.C_digo_de_cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Cliente</label>
    <type>Text</type>
</CustomField>