force-app/main/default/objects/Rappel__c/fields/Codigo_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_Producto__c</fullName>
    <formula>Product__r.Codigo_Identificador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código del Producto</label>
    <type>Text</type>
</CustomField>