force-app/main/default/objects/Rappel__c/fields/Fecha_Vigencia_Desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vigencia_Desde__c</fullName>
    <label>Fecha Vigencia Desde</label>
    <required>true</required>
    <type>Date</type>
</CustomField>