force-app/main/default/objects/Rappel__c/fields/Rappel__c.field-meta.xml
<CustomField>
    <fullName>Rappel__c</fullName>
    <label>Rappel</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>